--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
       "axios": "^0.26.1",
       "body-parser": "^1.20.0",
       "dotenv": "^16.0.0",
-      "express": "^4.17.3"
+      "express": "^4.17.3",
+      "rss-to-json": "^2.0.2"
     }
   }
   
