--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@styled-system/theme-get": "^5.1.2",
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
+    "bluebird": "^3.7.2",
     "concurrently": "^7.1.0",
     "easyqrcodejs": "^4.4.10",
     "html-entities": "^2.3.2",
@@ -34,6 +35,7 @@
     "react-accessible-accordion": "3.3.5",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-aria-menubutton": "^7.0.2",
+    "react-big-calendar": "^0.40.0",
     "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.7.0",
